<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <Button
            android:id="@+id/button_prev"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/prev_day" />
        
        <Button
            android:id="@+id/button_next"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/next_day" />
        
        <Button
            android:id="@+id/button_today"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/this_day" />        
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/graph"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />

</LinearLayout>