<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <Button
            android:id="@+id/button_prev"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/prev_month" />
        
        <Button
            android:id="@+id/button_next"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/next_month" />
        
        <Button
            android:id="@+id/button_today"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/this_month" />        
    </LinearLayout>
    
    <LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="30dp"
	    android:orientation="horizontal" >
	    
	    <TextView
	        android:id="@+id/text_label_total"
		    android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:layout_weight="1"
	    	android:textSize="24dp"
	    />
        
	    <TextView
	        android:id="@+id/text_value_total"
		    android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:layout_weight="1"
	    	android:textSize="24dp"
	    	android:gravity="right"
	    />
	</LinearLayout>

    <LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="4dp"
	    android:background="#00cc00"
	/>
    
    <LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="30dp"
	    android:orientation="horizontal" >
	    
	    <TextView
	        android:id="@+id/text_label_period"
		    android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:layout_weight="1"
	    	android:textSize="20dp"
	    />
        
	    <TextView
	        android:id="@+id/text_value_period"
		    android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:layout_weight="1"
	    	android:textSize="20dp"
	    	android:gravity="right"
	    />
	</LinearLayout>

    <LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="2dp"
	    android:background="#00cc00"
	/>
    
	<TableView 
	    android:id="@+id/calendar"
	    android:layout_width="fill_parent" 
	    android:layout_height="fill_parent"
	    android:columnWidth="90dp"
	    android:numColumns="7"
	    android:verticalSpacing="10dp"
	    android:horizontalSpacing="10dp"
	    android:stretchMode="columnWidth"
	    android:gravity="center"
	/>
</LinearLayout>