<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
    >
        <Button
            android:id="@+id/button_prev"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/prev_month"
	    />
        <Button
            android:id="@+id/button_next"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/next_month"
	    />
        <Button
            android:id="@+id/button_today"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/this_month"
	    />        
    </LinearLayout>
    
    <LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	>
	    <TextView
	        android:id="@+id/text_label_total"
		    android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:layout_weight="1"
	    	android:textSize="20dp"
	    />
	    <TextView
	        android:id="@+id/text_value_total"
		    android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:layout_weight="1"
	    	android:textSize="20dp"
	    	android:gravity="right"
	    />
	</LinearLayout>

    <LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="2dp"
	    android:background="#00cc00"
	    android:layout_marginTop="5dp"
	    android:layout_marginBottom="5dp"
	/>
    
    <LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	>
	    <TextView
	        android:id="@+id/text_label_period"
		    android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:layout_weight="1"
	    	android:textSize="20dp"
	    />
	    <TextView
	        android:id="@+id/text_value_period"
		    android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:layout_weight="1"
	    	android:textSize="20dp"
	    	android:gravity="right"
	    />
	</LinearLayout>

    <LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	>
	    <TextView
	        android:id="@+id/text_lob_period"
		    android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:layout_weight="1"
	    	android:textSize="20dp"
	    	android:gravity="right"
	    />
    </LinearLayout>
	    
    <LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="2dp"
	    android:background="#00cc00"
	    android:layout_marginTop="5dp"
	    android:layout_marginBottom="15dp"
	/>
    
    <ScrollView
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	>
	    <LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        android:baselineAligned="false"
	    >
		    <LinearLayout
		        android:id="@+id/production_daily_1"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:layout_weight="1"
			    android:orientation="vertical"
			/>
		    <LinearLayout
			    android:layout_width="25dp"
			    android:layout_height="wrap_content"
			    android:background="#000000"
		    />
		    <LinearLayout
		        android:id="@+id/production_daily_2"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:layout_weight="1"
			    android:orientation="vertical"
			/>
		    <LinearLayout
			    android:layout_width="25dp"
			    android:layout_height="wrap_content"
			    android:background="#000000"
			/>
		    <LinearLayout
		        android:id="@+id/production_daily_3"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:layout_weight="1"
			    android:orientation="vertical"
			/>
		</LinearLayout>
    </ScrollView>
</LinearLayout>